# holosocket

./: .gitignore  Cargo.toml  readme.md
.github/workflows/: cd.yaml
src/: auto_stream_live.rs  main.rs
