[package]
name = "holosocket"
version = "0.1.0"
license = "MIT"
authors = ["ryan <yarnnd@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fern = "0.6.0"
log = "0.4.11"
futures = "^0.3.5"
async-std = { version = "1.6.2", features = ["unstable"] }
# broadcaster = "1.0.0"
# async-channel = "1.4.0"
surf = "1.0.3"
tide = "0.14"
# tide_compressed_sse = "4.0.0"
http-types = "^2.3.0"
chrono = { version = "0.4.13", features = ["serde"] }
serde = { version = "1.0.114", features = ["derive"] }
serde_json = "1.0.56"
anyhow = "1.0.32"

[patch.crates-io]
async-sse = { git = "https://github.com/http-rs/async-sse.git", rev = "79ef595aa39053456c43c82429a62a3404bc3628" }
